--- a/receive/templates/order_add_edit.html
+++ b/receive/templates/order_add_edit.html
@@ -3,11 +3,37 @@
 {% block content %}
     {% load bootstrap3 %}
     <div class="row">
+
+
+        {% if form.errors %}
+            {% for field in form %}
+                {% for error in field.errors %}
+                    <div class="alert alert-danger">
+                        <strong>{{ error|escape }}</strong>
+                    </div>
+                {% endfor %}
+            {% endfor %}
+            {% for error in form.non_field_errors %}
+                <div class="alert alert-danger">
+                    <strong>{{ error|escape }}</strong>
+                </div>
+            {% endfor %}
+        {% endif %}
+
         <div class="col-lg-12">
             <form role="form" method="post">
                 {% csrf_token %}
                 <div class="login-form">
                     <h3 class="heading">Add Order </h3>
+
+
+                    {% if selected_org %}
+                        <div class="row">
+                            <div class="col-lg-2">
+                                <label><b>Client</b></label></div>
+                            <div class="col-lg-10">:&nbsp;&nbsp;&nbsp;<label>{{ selected_org }}</label></div>
+                        </div>
+                    {% endif %}
                     <br>
                     <br>
                     {% bootstrap_form form %}
