--- a/receive/templates/order_details.html
+++ b/receive/templates/order_details.html
@@ -128,6 +128,7 @@
                 <div class="col-lg-12">
                     <a href="
 
+
                             {% url 'add_order_details' %}{% if selected_order %}?order_id={{ selected_order.id }}{% endif %}"
                        class="btn btn-default"> <i
                             class="fa fa-plus" style="font-size: x-large;color: black;"></i></a>
@@ -146,7 +147,6 @@
                             <th>Item UDF2</th>
                             <th>QTY REQ</th>
                             <th>QTY REC</th>
-                            <th>Total units</th>
                             <th>Edit</th>
                             <th>Delete</th>
                         </tr>
@@ -165,17 +165,10 @@
                                 <td>{{ order.item_udf2 }}</td>
                                 <td>{{ order.quantity_requested }}</td>
                                 <td>{{ order.quantity_received }}</td>
-                                <td>{{ order.quantity_received }}</td>
-                                <td><a href="{% url 'edit_detail' order.id %}"><i class="fa fa-edit"></i></a>
-                                </td>
-                                <td>{{ order.quantity_received }}</td>
-                                {#                                <td>{{ order.receive_finish_date }}</td>#}
-                                {#                                <td> {% if item.active %}  <i class="fa fa-check" style="color: green"></i>#}
-                                {#                                {% else %} <i class="fa fa-times" style="color: red"></i>{% endif %}</td>#}
-                                {##}
-                                {##}
-                                {#                                <td><a href="{% url 'order_details' order.id %}"> <i class="fa fa-check"#}
-                                {#                                                                                     style="color: green"></i></a></td>#}
+                                <td><a href="{% url 'edit_detail' order.id %}"><i class="fa fa-edit"></i></a></td>
+                                <td><a href="{% url 'delete_detail' order.id %}"> <i class="fa fa-times"
+                                                                                   style="color: red;"></i></a></td>
+
                             </tr>
 
                         {% endfor %}
