--- a/receive/templates/orders.html
+++ b/receive/templates/orders.html
@@ -85,11 +85,11 @@
                             <th>Order</th>
                             <th>Reference</th>
                             <th>Status</th>
+                            <th>Exp Date</th>
                             <th>Container</th>
                             <th>Carrier</th>
-                            <th>Exp Date</th>
                             <th>Edit</th>
-                            <th>Orders</th>
+                            <th>Details</th>
                         </tr>
                         </thead>
                         <tbody>
@@ -100,18 +100,11 @@
                                 <td>{{ order.organization }}</td>
                                 <td>{{ order.order_no }}</td>
                                 <td>{{ order.ref_no }}</td>
-                                <td>{{ order.status }}</td>
-                                <td>{{ order.status }}</td>
-                                <td>{{ order.status }}</td>
+                                <td>{{ order.get_status_display }}</td>
                                 <td>{{ order.receive_finish_date }}</td>
-                                {#                                <td>{{ order.receive_finish_date }}</td>#}
-                                {#                                <td>{{ order.receive_finish_date }}</td>#}
-                                {#                                <td> {% if item.active %}  <i class="fa fa-check" style="color: green"></i>#}
-                                {#                                {% else %} <i class="fa fa-times" style="color: red"></i>{% endif %}</td>#}
-                                {##}
-                                <td><a href="{% url 'edit_order' order.id %}"><i class="fa fa-edit"></i></a>
-                                </td>
-                                {##}
+                                <td>{{ order.container }}</td>
+                                <td>{{ order.carrier }}</td>
+                                <td><a href="{% url 'edit_order' order.id %}"><i class="fa fa-edit"></i></a></td>
                                 <td><a href="{% url 'order_details' order.id %}"> <i class="fa fa-check"
                                                                                      style="color: green"></i></a></td>
                             </tr>
