--- a/receive/templates/order_details_add_edit.html
+++ b/receive/templates/order_details_add_edit.html
@@ -45,4 +45,23 @@
         </div>
 
     </div>
+
+
+    <script>
+        $("#id_item").change(function () {
+            var url = "{% url 'load_item_uom' %}"  // get the url of the `load_cities` view
+            var itemId = $(this).val();  // get the selected country ID from the HTML input
+
+            $.ajax({                       // initialize an AJAX request
+                url: url,                    // set the url of the request (= localhost:8000/hr/ajax/load-cities/)
+                data: {
+                    'item': itemId       // add the country id to the GET parameters
+                },
+                success: function (data) {   // `data` is the return of the `load_cities` view function
+                    $("#id_itemuom").html(data);  // replace the contents of the city input with the data that came from the server
+                }
+            });
+
+        });
+    </script>
 {% endblock content %}
