--- a/receive/templates/item_uom_dropdown.html
+++ b/receive/templates/item_uom_dropdown.html
@@ -1,4 +1,4 @@
 <option value="">---------</option>
 {% for item in item_uoms %}
-<option value="{{ item.pk }}">{{ item.item }} - {{ item.pack }} - {{ item.pack_type }}</option>
+<option value="{{ item.pk }}">{{ item.pack }} - {{ item.pack_type }}</option>
 {% endfor %}
