--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -77,7 +77,7 @@
                        style="background-color: darkgray; color: black;"{% endif %}
                        class="list-group-item d-inline-block collapsed active-link" data-parent="#sidebar"><i
                             class="fa fa-film"></i> <span class="d-none d-md-inline">Receiving</span></a>
-                    <a href="{% url 'shipping' %}" {% if tab == 'shipping' %}
+                    <a href="{% url 'shipping_orders' %}" {% if tab == 'shipping' %}
                        style="background-color: darkgray; color: black;"{% endif %}
                        class="list-group-item d-inline-block collapsed"
                        data-parent="#sidebar"><i
