--- a/receive/templates/shipping/order_details_add_edit.html
+++ b/receive/templates/shipping/order_details_add_edit.html
@@ -23,7 +23,11 @@
                             <div class="col-lg-10">:&nbsp;&nbsp;&nbsp;<label>{{ order.order_no }}</label></div>
                         </div>
 
-
+                        <div class="row">
+                            <div class="col-lg-2">
+                                <label><b>Po#</b></label></div>
+                            <div class="col-lg-10">:&nbsp;&nbsp;&nbsp;<label>{{ order.ponumber }}</label></div>
+                        </div>
                         <div class="row">
                             <div class="col-lg-2">
                                 <label><b>Ref #</b></label></div>
