--- a/receive/templates/shipping/order_details.html
+++ b/receive/templates/shipping/order_details.html
@@ -53,7 +53,7 @@
                 <div class="col-lg-8">
                     <div class="row">
                         <div class="col-lg-5">
-                            <label style="font-size: small;"><b>Expected Arrival date</b></label>
+                            <label style="font-size: small;"><b>Expected Shipped date</b></label>
                         </div>
                         <div class="col-lg-7">
                             :&nbsp;&nbsp;&nbsp;<label>{{ selected_order.expected_arrival_date }}</label></div>
@@ -75,7 +75,7 @@
                 <div class="col-lg-8">
                     <div class="row">
                         <div class="col-lg-5">
-                            <label style="font-size: small;"><b>Actual Arrival date</b></label></div>
+                            <label style="font-size: small;"><b>Actual Shipped date</b></label></div>
                         <div class="col-lg-7">:&nbsp;&nbsp;&nbsp;<label>{{ selected_order.actual_arrival_date }}</label>
                         </div>
                     </div>
@@ -96,11 +96,9 @@
 
                 <div class="col-lg-8">
                     <div class="row">
-
                         <div class="col-lg-5">
-                            <label style="font-size: small;"><b>Receive Start Date</b></label></div>
-                        <div class="col-lg-7">:&nbsp;&nbsp;&nbsp;<label>{{ selected_order.receive_start_date }}</label>
-                        </div>
+                            <label style="font-size: small;"><b>Order Status</b></label></div>
+                        <div class="col-lg-7">:&nbsp;&nbsp;&nbsp;<label>{{ selected_order.status }}</label></div>
                     </div>
                 </div>
             </div>
@@ -108,18 +106,12 @@
             <div class="row">
                 <div class="col-lg-4">
                     <div class="row">
-                        <div class="col-lg-5">
-                            <label style="font-size: small;"><b>Order Status</b></label></div>
-                        <div class="col-lg-7">:&nbsp;&nbsp;&nbsp;<label>{{ selected_order.status }}</label></div>
+
                     </div>
                 </div>
 
                 <div class="col-lg-8">
                     <div class="row">
-                        <div class="col-lg-5">
-                            <label style="font-size: small;"><b>Receive Finish Date</b></label></div>
-                        <div class="col-lg-7">:&nbsp;&nbsp;&nbsp;<label>{{ selected_order.receive_finish_date }}</label>
-                        </div>
                     </div>
                 </div>
             </div>
@@ -151,7 +143,7 @@
                             <th>Item UDF1</th>
                             <th>Item UDF2</th>
                             <th>QTY REQ</th>
-                            <th>QTY REC</th>
+                            <th>QTY Ship</th>
                             <th>Edit</th>
                             <th>Delete</th>
                         </tr>
