--- a/receive/templates/shipping/order_details.html
+++ b/receive/templates/shipping/order_details.html
@@ -50,7 +50,7 @@
                 </div>
 
 
-                <div class="col-lg-8">
+                <div class="col-lg-4">
                     <div class="row">
                         <div class="col-lg-5">
                             <label style="font-size: small;"><b>Expected Shipped date</b></label>
@@ -59,6 +59,19 @@
                             :&nbsp;&nbsp;&nbsp;<label>{{ selected_order.expected_arrival_date }}</label></div>
                     </div>
                 </div>
+
+
+                <div class="col-lg-4">
+                    <div class="row">
+                        <div class="col-lg-5">
+                            <label style="font-size: small;"><b>Description</b></label>
+                        </div>
+                        <div class="col-lg-7">
+                            :&nbsp;&nbsp;&nbsp;<label>{{ selected_order.organization.description }}</label></div>
+                    </div>
+                </div>
+
+
             </div>
 
 
@@ -72,7 +85,7 @@
                 </div>
 
 
-                <div class="col-lg-8">
+                <div class="col-lg-4">
                     <div class="row">
                         <div class="col-lg-5">
                             <label style="font-size: small;"><b>Actual Shipped date</b></label></div>
@@ -80,6 +93,16 @@
                         </div>
                     </div>
                 </div>
+                <div class="col-lg-4">
+                    <div class="row">
+                        <div class="col-lg-5">
+                            <label style="font-size: small;"><b>Address1</b></label>
+                        </div>
+                        <div class="col-lg-7">
+                            :&nbsp;&nbsp;&nbsp;<label>{{ selected_order.organization.st_address1 }}</label></div>
+                    </div>
+                </div>
+
             </div>
 
 
@@ -94,11 +117,45 @@
                 </div>
 
 
-                <div class="col-lg-8">
+                <div class="col-lg-4">
                     <div class="row">
                         <div class="col-lg-5">
                             <label style="font-size: small;"><b>Order Status</b></label></div>
                         <div class="col-lg-7">:&nbsp;&nbsp;&nbsp;<label>{{ selected_order.status }}</label></div>
+                    </div>
+                </div>
+
+                <div class="col-lg-4">
+                    <div class="row">
+                        <div class="col-lg-5">
+                            <label style="font-size: small;"><b>Address2</b></label>
+                        </div>
+                        <div class="col-lg-7">
+                            :&nbsp;&nbsp;&nbsp;<label>{{ selected_order.organization.st_address2 }}</label></div>
+                    </div>
+                </div>
+
+            </div>
+
+            <div class="row">
+                <div class="col-lg-4">
+                    <div class="row">
+
+                    </div>
+                </div>
+
+                <div class="col-lg-4">
+                    <div class="row">
+                    </div>
+                </div>
+
+                <div class="col-lg-4">
+                    <div class="row">
+                        <div class="col-lg-5">
+                            <label style="font-size: small;"><b>City</b></label>
+                        </div>
+                        <div class="col-lg-7">
+                            :&nbsp;&nbsp;&nbsp;<label>{{ selected_order.organization.st_city }}</label></div>
                     </div>
                 </div>
             </div>
@@ -110,8 +167,41 @@
                     </div>
                 </div>
 
-                <div class="col-lg-8">
+                <div class="col-lg-4">
                     <div class="row">
+                    </div>
+                </div>
+
+                <div class="col-lg-4">
+                    <div class="row">
+                        <div class="col-lg-5">
+                            <label style="font-size: small;"><b>State</b></label>
+                        </div>
+                        <div class="col-lg-7">
+                            :&nbsp;&nbsp;&nbsp;<label>{{ selected_order.organization.st_state }}</label></div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="col-lg-4">
+                    <div class="row">
+
+                    </div>
+                </div>
+
+                <div class="col-lg-4">
+                    <div class="row">
+                    </div>
+                </div>
+
+                <div class="col-lg-4">
+                    <div class="row">
+                        <div class="col-lg-5">
+                            <label style="font-size: small;"><b>Zip</b></label>
+                        </div>
+                        <div class="col-lg-7">
+                            :&nbsp;&nbsp;&nbsp;<label>{{ selected_order.organization.st_zip }}</label></div>
                     </div>
                 </div>
             </div>
@@ -119,6 +209,7 @@
             <div class="row">
                 <div class="col-lg-12">
                     <a href="
+
 
 
 
