--- a/receive/templates/shipping/customer_info.html
+++ b/receive/templates/shipping/customer_info.html
@@ -2,7 +2,7 @@
     <div class="col-md-1"></div>
     <div class="col-md-10">
         <div class="row">
-            <div class="col-md-6">Address1: {{ customer.description }}</div>
+            <div class="col-md-6">Description: {{ customer.description }}</div>
             <div class="col-md-6">Address1: {{ customer.st_address1 }}</div>
             <div class="col-md-6">Address2: {{ customer.st_address2 }}</div>
             <div class="col-md-6">City: {{ customer.st_city }}</div>
