--- a/receive/templates/shipping/order_details.html
+++ b/receive/templates/shipping/order_details.html
@@ -120,8 +120,9 @@
                 <div class="col-lg-4">
                     <div class="row">
                         <div class="col-lg-5">
-                            <label style="font-size: small;"><b>Order Status</b></label></div>
-                        <div class="col-lg-7">:&nbsp;&nbsp;&nbsp;<label>{{ selected_order.status }}</label></div>
+
+                            <label style="font-size: small;"><b>Calcel Date</b></label></div>
+                        <div class="col-lg-7">:&nbsp;&nbsp;&nbsp;<label>{{ selected_order.cancel_date }}</label></div>
                     </div>
                 </div>
 
@@ -146,6 +147,10 @@
 
                 <div class="col-lg-4">
                     <div class="row">
+                        <div class="col-lg-5">
+
+                            <label style="font-size: small;"><b>Order Status</b></label></div>
+                        <div class="col-lg-7">:&nbsp;&nbsp;&nbsp;<label>{{ selected_order.status }}</label></div>
                     </div>
                 </div>
 
@@ -209,6 +214,7 @@
             <div class="row">
                 <div class="col-lg-12">
                     <a href="
+
 
 
 
